# agents

./: error_log_20250527_193246.txt
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  app.py
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  4_lab4.ipynb
3_crew/flux_forge_prototype_coder/: README.md  leibniz_series_output.txt  pyproject.toml
3_crew/flux_forge_prototype_coder/output/: code_and_output.txt
3_crew/flux_forge_prototype_coder/src/flux_forge_prototype_coder/: crew.py  main.py
3_crew/flux_forge_prototype_coder/src/flux_forge_prototype_coder/config/: agents.yaml  tasks.yaml
3_crew/fluxforge_engineering_team/: README.md  pyproject.toml
3_crew/fluxforge_engineering_team/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
3_crew/fluxforge_engineering_team/output/.gradio/flagged/: dataset1.csv
3_crew/fluxforge_engineering_team/src/fluxforge_engineering_team/: crew.py  main.py
3_crew/fluxforge_engineering_team/src/fluxforge_engineering_team/config/: agents.yaml  tasks.yaml
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  memory.db-shm  memory.db-wal  sidekick.py
5_autogen/: 1_lab1_autogen_agentchat.ipynb  2_lab2_autogen_agentchat.ipynb  3_lab3_autogen_core.ipynb  4_lab4_autogen_distributed.ipynb  agent1.py  agent10.py  agent11.py  agent12.py  agent13.py  agent14.py  agent15.py  agent16.py  agent17.py  agent18.py  agent19.py  agent2.py  agent20.py  agent3.py  agent4.py  agent5.py  agent6.py  agent7.py  agent8.py  agent9.py  creator.py  idea1.md  idea10.md  idea11.md  idea12.md  idea13.md  (+15 more)
(+52 files in other folders)
