[project]
name = "flux_forge_prototype_coder"
version = "0.1.0"
description = "flux_forge_prototype_coder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
flux_forge_prototype_coder = "flux_forge_prototype_coder.main:run"
run_crew = "flux_forge_prototype_coder.main:run"
train = "flux_forge_prototype_coder.main:train"
replay = "flux_forge_prototype_coder.main:replay"
test = "flux_forge_prototype_coder.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
